# self_improving_agents

./: .gitignore  .pre-commit-config.yaml  README.md  notes.md  pyproject.toml
.cursor/rules/: general-rules.mdc
.github/workflows/: python-ci.yml
examples/: composed_prompt.txt  data_collection.json  data_collection.py  env_eval.py  env_llm_call.py  environment_example.py  eval_pipeline.py  eval_results.json  evals_df.json  export.py  generate_samples_and_upload.py  inputs.json  load_evaluator.py  original.md  policy_update_example.py  primary_df.json  register_arize_project.py  results.json  run.sh  run_and_upsert_evals.py  run_ephemeral_validation.py  scale1.md  scale3.md  scale5.md  simple_optimization.py  test_load_snapshot.py  update_policy.py  workflow_example.py
notes/: guidelines.md  video_transcript.txt
src/self_improving_agents/: __init__.py
src/self_improving_agents/environment/: llm_environment.py  snapshot.py
src/self_improving_agents/evaluator_handler/: __init__.py  eval_pipeline.py  models.py  tracker.py
src/self_improving_agents/models/: __init__.py  state_action.py
src/self_improving_agents/policy/: __init__.py  base.py  llm_policy_updater.py
src/self_improving_agents/runners/: README.md  __init__.py  arize_connector.py  data_collection_runner.py
src/self_improving_agents/validation/: __init__.py  ephemeral_validator.py
tests/: test_evaluator_instrumentation.py  test_telemetry_retrieval_and_preprocessing.py  test_update_loop.py
